# timecal

./: .gitmodules  CMakeLists.txt  LICENSE  README.adoc
chk/: CMakeLists.txt  chk.cpp  hoursminutes.cpp
src/: CMakeLists.txt  HourMinute.cpp  HourMinute.h  HoursMinutes.cpp  HoursMinutes.h  timecal.cpp
